manifests/stable-manifests/stable/gocd/manifest.yaml

---
# Source: gocd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joking-gopher-gocd-server
  annotations:
  labels:
    app: gocd
    chart: "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: server
spec:
  type: NodePort
  ports:
    - port: 8153
      targetPort: 8153
      protocol: TCP
      name: http

    - port: 8154
      targetPort: 8154
      protocol: TCP
      name: https
  selector:
    app: gocd
    release: "joking-gopher"
    component: server
---
# Source: gocd/templates/gocd-agent-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: joking-gopher-gocd-agent
  labels:
    app: gocd
    chart:  "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: agent
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gocd
      release: "joking-gopher"
      component: agent
  template:
    metadata:
      labels:
        app: gocd
        release: "joking-gopher"
        component: agent
    spec:
      containers:
        - name: gocd-agent
          image: "gocd/gocd-agent-alpine-3.6:v18.5.0"
          imagePullPolicy: IfNotPresent
          resources:
            {}
            
---
# Source: gocd/templates/gocd-server-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: joking-gopher-gocd-server
  labels:
    app: gocd
    chart: "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gocd
      release: "joking-gopher"
      component: server
  template:
    metadata:
      labels:
        app: gocd
        release: "joking-gopher"
        component: server
    spec:
      serviceAccountName: joking-gopher-gocd
      volumes:
        - name: goserver-vol
          persistentVolumeClaim:
            claimName: joking-gopher-gocd-server
        - name: config-vol
          configMap:
            name: joking-gopher-gocd
      containers:
        - name: gocd-server
          image: "gocd/gocd-server:v18.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8153
            - containerPort: 8154
          livenessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: goserver-vol
              mountPath: /godata
              subPath: godata
            - name: goserver-vol
              mountPath: /home/go
              subPath: homego
            - name: goserver-vol
              mountPath: /docker-entrypoint.d
              subPath: scripts
            - name: config-vol
              mountPath: /preconfigure_server.sh
              subPath: preconfigure_server.sh
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash","/preconfigure_server.sh"]
          resources:
            {}
---
# Source: gocd/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: joking-gopher-gocd-server
  labels:
    app: gocd
    chart: "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: server
  annotations:
spec:
  backend:
    serviceName: joking-gopher-gocd-server
    servicePort: 8153
  rules:
