manifests/stable-manifests/stable/gocd/output.yaml
[debug] Created tunnel using local port: '40123'

[debug] SERVER: "127.0.0.1:40123"

[debug] Original chart version: ""
[debug] CHART PATH: /home/matt/go/src/k8s.io/charts/stable/gocd

NAME:   joking-gopher
REVISION: 1
RELEASED: Sat Jun  2 15:00:19 2018
CHART: gocd-1.0.8
USER-SUPPLIED VALUES:
{}

COMPUTED VALUES:
agent:
  env:
    agentAutoRegisterEnvironemnts: null
    agentAutoRegisterHostname: null
    agentAutoRegisterKey: null
    agentAutoRegisterResources: null
    goAgentBootstrapperArgs: null
    goAgentBootstrapperJvmArgs: null
    goAgentSystemProperties: null
    goServerUrl: null
  healthCheck:
    enabled: false
    failureThreshold: 60
    initialDelaySeconds: 60
    periodSeconds: 60
  image:
    pullPolicy: IfNotPresent
    repository: gocd/gocd-agent-alpine-3.6
    tag: null
  nodeSelector: {}
  persistence:
    accessMode: ReadWriteOnce
    enabled: false
    existingClaim: null
    pvSelector: null
    size: 1Gi
    subpath:
      dockerEntryPoint: scripts
      homego: homego
  replicaCount: 0
  resources: {}
rbac:
  apiVersion: v1beta1
  create: true
  roleRef: null
server:
  enabled: true
  env:
    extraEnvVars:
    - name: GOCD_PLUGIN_INSTALL_kubernetes-elastic-agents
      value: https://github.com/gocd/kubernetes-elastic-agents/releases/download/v1.0.1/kubernetes-elastic-agent-1.0.1-107.jar
    goServerSystemProperties: null
  healthCheck:
    failureThreshold: 10
    initialDelaySeconds: 90
    periodSeconds: 15
  image:
    pullPolicy: IfNotPresent
    repository: gocd/gocd-server
    tag: null
  ingress:
    annotations: null
    enabled: true
    tls: null
  nodeSelector: {}
  persistence:
    accessMode: ReadWriteOnce
    enabled: true
    existingClaim: null
    pvSelector: null
    size: 2Gi
    subpath:
      dockerEntryPoint: scripts
      godata: godata
      homego: homego
  resources: {}
  service:
    httpPort: 8153
    httpsPort: 8154
    nodeHttpPort: null
    nodeHttpsPort: null
    type: NodePort
  shouldPreconfigure: true
serviceAccount:
  create: true
  name: null

HOOKS:
---
# joking-gopher-gocd-test-nknpf
apiVersion: v1
kind: Pod
metadata:
  name: "joking-gopher-gocd-test-nknpf"
  labels:
    app: gocd
    chart: "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: gocd-ui-test
      image: "gocddev/gocd-helm-build:v0.1.0"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
        - mountPath: /tools
          name: tools
  volumes:
    - name: tests
      configMap:
        name: joking-gopher-gocd-tests
    - name: tools
      emptyDir: {}
  restartPolicy: Never
MANIFEST:

---
# Source: gocd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joking-gopher-gocd-server
  annotations:
  labels:
    app: gocd
    chart: "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: server
spec:
  type: NodePort
  ports:
    - port: 8153
      targetPort: 8153
      protocol: TCP
      name: http

    - port: 8154
      targetPort: 8154
      protocol: TCP
      name: https
  selector:
    app: gocd
    release: "joking-gopher"
    component: server
---
# Source: gocd/templates/gocd-agent-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: joking-gopher-gocd-agent
  labels:
    app: gocd
    chart:  "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: agent
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gocd
      release: "joking-gopher"
      component: agent
  template:
    metadata:
      labels:
        app: gocd
        release: "joking-gopher"
        component: agent
    spec:
      containers:
        - name: gocd-agent
          image: "gocd/gocd-agent-alpine-3.6:v18.5.0"
          imagePullPolicy: IfNotPresent
          resources:
            {}
            
---
# Source: gocd/templates/gocd-server-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: joking-gopher-gocd-server
  labels:
    app: gocd
    chart: "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gocd
      release: "joking-gopher"
      component: server
  template:
    metadata:
      labels:
        app: gocd
        release: "joking-gopher"
        component: server
    spec:
      serviceAccountName: joking-gopher-gocd
      volumes:
        - name: goserver-vol
          persistentVolumeClaim:
            claimName: joking-gopher-gocd-server
        - name: config-vol
          configMap:
            name: joking-gopher-gocd
      containers:
        - name: gocd-server
          image: "gocd/gocd-server:v18.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8153
            - containerPort: 8154
          livenessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: goserver-vol
              mountPath: /godata
              subPath: godata
            - name: goserver-vol
              mountPath: /home/go
              subPath: homego
            - name: goserver-vol
              mountPath: /docker-entrypoint.d
              subPath: scripts
            - name: config-vol
              mountPath: /preconfigure_server.sh
              subPath: preconfigure_server.sh
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash","/preconfigure_server.sh"]
          resources:
            {}
---
# Source: gocd/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: joking-gopher-gocd-server
  labels:
    app: gocd
    chart: "gocd-1.0.8"
    release: "joking-gopher"
    heritage: "Tiller"
    component: server
  annotations:
spec:
  backend:
    serviceName: joking-gopher-gocd-server
    servicePort: 8153
  rules:
